--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -609,8 +609,7 @@ h1
 		width: 1px
 		height: 21px
 		background-color: #000
-		margin: 0 8px
-
+		margin: 0 8px -5px
 
 	&__container
 		display: flex
