--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -408,9 +408,17 @@
 
 	.footer
 		padding: 30px 0
-		
+		text-align: center
+
 		p
 			margin-bottom: 10px
+			width: 100%
+
+			a
+				display: block
+
+			span
+				display: none
 
 		&__logo
 			margin-bottom: 10px
