--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -23,15 +23,14 @@ h1
 	text-align: center
 	padding:
 		top: 115px 
-		bottom: 765px
+		bottom: 805px
 	z-index: 1
-	background-color: #f6f8fb
 
 	p
 		font-size: 30px
-		text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+		line-height: 49px
 		color: #171717
-		font-weight: 700
+		font-weight: 400
 
 
 	&__logo
@@ -41,7 +40,7 @@ h1
 
 	&__bg
 		position: absolute
-		bottom: 90px
+		bottom: 40px
 		left: 50%
 		transform: translate(-50%, 0)
 		z-index: -1
