pravki 1.1 bulet scroll modal commit

--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -40,22 +40,25 @@
 		margin-bottom: 20px
 
 	&--content
-		max-width: 800px
 		padding: 0
 
+		&__wrap
+			max-height: 90vh
+			overflow: auto
+
 		h3
-			font-size: 45px
-			margin-bottom: 25px
+			font-size: 36px
+			margin-bottom: 15px
 			text-align: left
-			line-height: 1.5
+			line-height: 1.1
 
 		p
-			margin-bottom: 45px
-			font-size: 28px
+			margin-bottom: 15px
+			font-size: 22px
 
 		a
 			position: relative
-			font-size: 30px
+			font-size: 22px
 			
 			&:hover,
 			&:focus
