--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,2 +1,11 @@
 @import "../libs/bootstrap/bootstrap-reboot.min.css"
 @import "../libs/swiper/swiper.min.css"
+
+
+.swiper-pagination
+	span
+		width: 13px
+		height: 13px
+
+	.swiper-pagination-bullet-active
+		background: #DB5156
