--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -11,6 +11,10 @@ $text: #000
 
 //---------------------end-color---------------------
 
+
+html
+	scroll-behavior: smooth
+
 body
 	overflow-x: hidden
 	position: relative
@@ -33,7 +37,7 @@ a, div, ul, li, input, textarea
 
 section
 	overflow: hidden
-	
+
 h1, h2, h3, h4, h5, h6
 	font-weight: 700
 	line-height: 1.1
