--- a/app/sass/_base/_form.sass
+++ b/app/sass/_base/_form.sass
@@ -6,7 +6,7 @@
 		left: 25px
 		transition: all .3s
 		animation: error .3s linear 1 forwards
-		color: red
+		color: #fff
 		text-align: center
 		font-weight: 600
 		background-color: $accent
@@ -17,7 +17,7 @@
 			position: absolute
 			left: 50%
 			top: -8px
-			margin-left: -2px
+			transform: translate(-50%, 0)
 			border-bottom: 4px solid $accent
 			border-left: 4px solid transparent
 			border-right: 4px solid transparent
