--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -76,6 +76,7 @@
 		&__img
 			width: 100%
 			margin-bottom: 35px
+			background: #E1E7F6
 
 			img
 				width: 100%
@@ -84,6 +85,24 @@
 
 		&__text
 			padding: 0 35px 50px 35px
+		
+	&--thanks
+
+		h3, p
+			color: #000
+			text-align: center
+
+		h3
+			font-size: 23px
+			margin-bottom: 25px
+			line-height: 2
+
+		img
+			margin-right: 10px
+
+		p
+			font-size: 18px
+
 
 .close
 	position: absolute
@@ -133,3 +152,6 @@
 
 		&:nth-child(2)
 			transform: translate(-50%, -50%) rotate(-45deg)
+
+
+
