--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -1,32 +1,32 @@
-@media only screen and (max-width : 1700px)
-	.hero__logo
-		top: 15px
-		right: 15px
+// @media only screen and (max-width : 1700px)
+// 	.hero__logo
+// 		top: 15px
+// 		right: 15px
 
 
-@media only screen and (max-width : 1550px)
-	.tabs__item
-		padding-bottom: 28%
+// @media only screen and (max-width : 1550px)
+// 	.tabs__item
+// 		padding-bottom: 28%
 
-		img
-			display: block
-			margin: 0 auto
-			max-width: 86%
+// 		img
+// 			display: block
+// 			margin: 0 auto
+// 			max-width: 86%
 
-		h2
-			font-size: 54px
-			line-height: 1.2
-			margin-bottom: 15px
+// 		h2
+// 			font-size: 54px
+// 			line-height: 1.2
+// 			margin-bottom: 15px
 
-		p
-			margin-bottom: 15px
-			line-height: 1.2
+// 		p
+// 			margin-bottom: 15px
+// 			line-height: 1.2
 
-		br
-			display: none
+// 		br
+// 			display: none
 
-	.hero__logo
-		width: 180px
+// 	.hero__logo
+// 		width: 180px
 
 
 @media only screen and (max-width : 1200px)
@@ -228,6 +228,18 @@
 
 
 @media only screen and (max-width : 767px)
+	.up
+		width: 50px
+		height: 50px
+		right: 20px
+
+		&--active
+			bottom: 20px
+
+		span
+			width: 20px
+			height: 20px
+
 	h2
 		br
 			display: none
