доробатки адаптив commit

--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,5 +1,6 @@
 @import "../libs/bootstrap/bootstrap-reboot.min.css"
 @import "../libs/swiper/swiper.min.css"
+@import "../libs/animation/animate.min.css"
 
 
 .swiper-pagination
