--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -57,7 +57,6 @@ h1
 		font-size: 33px
 		line-height: 72px
 		margin-bottom: 15px
-		font-weight: 700
 
 	h3
 		font-size: 50px
@@ -126,9 +125,7 @@ h1
 	padding-bottom: 70px
 
 	h2
-		font-size: 35px
 		line-height: 1.4
-		text-align: center
 		margin-bottom: 58px
 		
 	h3
@@ -177,6 +174,13 @@ h1
 
 .raffle
 
+	h2
+		margin-bottom: 60px
+		line-height: 1
+
+	&__link
+		display: none
+		
 	&__pagination
 		display: none
 
@@ -189,15 +193,13 @@ h1
 		100%
 			transform: translate(0, 0)
 
-	h2
-		margin-bottom: 60px
-		font-size: 35px
-		line-height: 1
-		text-align: center
 
 	&__wrap
 		position: relative
 		overflow: inherit
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
 
 		&::before,
 		&::after
@@ -282,7 +284,6 @@ h1
 	text-align: center
 
 	h2
-		font-size: 35px
 		margin-bottom: 30px
 
 	time, p
@@ -297,8 +298,10 @@ h1
 
 	img
 		margin-right: 15px
+		transition: all .6s
 
 	a
+		position: relative
 		font-size: 20px
 		font-weight: 500
 		color: #fff
@@ -307,9 +310,15 @@ h1
 		&:focus
 			color: #fff
 
+			img
+				right: -35px
+
 		img
+			position: absolute
+			top: 50%
+			right: -25px
+			transform: translate(0, -50%)
 			margin-right: 0
-			margin-left: 15px
 			width: 15px
 
 
@@ -320,8 +329,6 @@ h1
 	background: #F2F6FF
 
 	h2
-		text-align: center
-		font-size: 35px
 		line-height: 1.4
 		margin-bottom: 70px
 
@@ -421,11 +428,10 @@ h1
 		z-index: 1
 		color: #fff
 
-		&::before
-			content: ''
+		&_before
 			display: block
 			position: absolute
-			bottom: 30px
+			bottom: 20px
 			left: 50%
 			transform: translate(-50%, 0)
 			height: 1px
