fero bunner responsive commit

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -508,8 +508,11 @@
 			line-height: 1.4
 
 		&__bg
-			width: 120%
-			margin: 0 -10% 10px
+			position: relative
+			transform: translate(-50%, 0)
+			left: 50%
+			width: 900px
+			margin: 0 auto 10px
 
 	.tabs__item
 		&:last-child
